src/OpenCvSharp.Native/include/open_cv_sharp/photo/photo.h

typedef struct jyppx_ocv_align_mtb jyppx_ocv_align_mtb;
typedef struct jyppx_ocv_calibrate_crf jyppx_ocv_calibrate_crf;
typedef struct jyppx_ocv_merge_exposures jyppx_ocv_merge_exposures;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_align_mtb_create(
    int max_bits,
    int exclude_range,
    int cut,
    jyppx_ocv_align_mtb** aligner);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_align_mtb_release_handle(
    jyppx_ocv_align_mtb* aligner);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_align_mtb_process(
    jyppx_ocv_align_mtb* aligner,
    const jyppx_ocv_mat* const* src_images,
    jyppx_ocv_mat* const* dst_images,
    int image_count,
    const jyppx_ocv_mat* times,
    const jyppx_ocv_mat* response,
    int use_extra_inputs);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_align_mtb_calculate_shift(
    jyppx_ocv_align_mtb* aligner,
    const jyppx_ocv_mat* img0,
    const jyppx_ocv_mat* img1,
    int* shift_x,
    int* shift_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_align_mtb_shift_mat(
    jyppx_ocv_align_mtb* aligner,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int shift_x,
    int shift_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_align_mtb_compute_bitmaps(
    jyppx_ocv_align_mtb* aligner,
    const jyppx_ocv_mat* img,
    jyppx_ocv_mat* threshold_bitmap,
    jyppx_ocv_mat* exclude_bitmap);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_align_mtb_get_max_bits(
    const jyppx_ocv_align_mtb* aligner,
    int* max_bits);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_align_mtb_set_max_bits(
    jyppx_ocv_align_mtb* aligner,
    int max_bits);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_align_mtb_get_exclude_range(
    const jyppx_ocv_align_mtb* aligner,
    int* exclude_range);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_align_mtb_set_exclude_range(
    jyppx_ocv_align_mtb* aligner,
    int exclude_range);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_align_mtb_get_cut(
    const jyppx_ocv_align_mtb* aligner,
    int* cut);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_align_mtb_set_cut(
    jyppx_ocv_align_mtb* aligner,
    int cut);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_debevec_create(
    int samples,
    float lambda,
    int random,
    jyppx_ocv_calibrate_crf** calibrator);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_robertson_create(
    int max_iter,
    float threshold,
    jyppx_ocv_calibrate_crf** calibrator);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_calibrate_crf_release_handle(
    jyppx_ocv_calibrate_crf* calibrator);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_crf_process(
    jyppx_ocv_calibrate_crf* calibrator,
    const jyppx_ocv_mat* const* src_images,
    int image_count,
    jyppx_ocv_mat* dst,
    const jyppx_ocv_mat* times);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_debevec_get_lambda(
    const jyppx_ocv_calibrate_crf* calibrator,
    float* lambda);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_debevec_set_lambda(
    jyppx_ocv_calibrate_crf* calibrator,
    float lambda);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_debevec_get_samples(
    const jyppx_ocv_calibrate_crf* calibrator,
    int* samples);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_debevec_set_samples(
    jyppx_ocv_calibrate_crf* calibrator,
    int samples);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_debevec_get_random(
    const jyppx_ocv_calibrate_crf* calibrator,
    int* random);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_debevec_set_random(
    jyppx_ocv_calibrate_crf* calibrator,
    int random);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_robertson_get_max_iter(
    const jyppx_ocv_calibrate_crf* calibrator,
    int* max_iter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_robertson_set_max_iter(
    jyppx_ocv_calibrate_crf* calibrator,
    int max_iter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_robertson_get_threshold(
    const jyppx_ocv_calibrate_crf* calibrator,
    float* threshold);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_robertson_set_threshold(
    jyppx_ocv_calibrate_crf* calibrator,
    float threshold);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calibrate_robertson_get_radiance(
    const jyppx_ocv_calibrate_crf* calibrator,
    jyppx_ocv_mat* radiance);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_merge_debevec_create(
    jyppx_ocv_merge_exposures** merger);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_merge_mertens_create(
    float contrast_weight,
    float saturation_weight,
    float exposure_weight,
    jyppx_ocv_merge_exposures** merger);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_merge_robertson_create(
    jyppx_ocv_merge_exposures** merger);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_merge_exposures_release_handle(
    jyppx_ocv_merge_exposures* merger);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_merge_exposures_process(
    jyppx_ocv_merge_exposures* merger,
    const jyppx_ocv_mat* const* src_images,
    int image_count,
    jyppx_ocv_mat* dst,
    const jyppx_ocv_mat* times,
    const jyppx_ocv_mat* response,
    int input_mode);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_merge_mertens_get_contrast_weight(
    const jyppx_ocv_merge_exposures* merger,
    float* contrast_weight);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_merge_mertens_set_contrast_weight(
    jyppx_ocv_merge_exposures* merger,
    float contrast_weight);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_merge_mertens_get_saturation_weight(
    const jyppx_ocv_merge_exposures* merger,
    float* saturation_weight);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_merge_mertens_set_saturation_weight(
    jyppx_ocv_merge_exposures* merger,
    float saturation_weight);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_merge_mertens_get_exposure_weight(
    const jyppx_ocv_merge_exposures* merger,
    float* exposure_weight);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_merge_mertens_set_exposure_weight(
    jyppx_ocv_merge_exposures* merger,
    float exposure_weight);